[package]
name = "spi-memory-async"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>", "Emil Fresk <emil.fresk@gmail.com"]
edition = "2021"
description = "A generic driver for different SPI Flash and EEPROM chips"
documentation = "https://docs.rs/spi-memory-async/"
repository = "https://github.com/korken89/spi-memory-async.git"
keywords = ["serial", "flash", "eeprom", "spi", "async"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"

[dependencies]
embedded-hal-async = "1"
embedded-storage = "0.3.0"
embedded-storage-async = "0.4.0"
bitflags = "2"
defmt = "0.3"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
stm32f4xx-hal = { version = "0.7.0", features = ["stm32f401"] }
panic-semihosting = "0.5.2"

[profile.dev]
opt-level = "z"
panic = "abort"
